--- a/uae-pass-federated-authenticator/pom.xml
+++ b/uae-pass-federated-authenticator/pom.xml
@@ -21,7 +21,7 @@
 
     <groupId>uae-pass-federated-authenticator</groupId>
     <artifactId>org.wso2.carbon.identity.uae.pass.federated.authenticator</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.2</version>
     <packaging>bundle</packaging>
     <name>WSO2 Carbon - UAE Pass Federated Authenticator</name>
 
@@ -55,6 +55,11 @@
             <groupId>net.minidev</groupId>
             <artifactId>json-smart</artifactId>
             <version>${json-smart.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
         </dependency>
     </dependencies>
     <build>
