--- a/uae-pass-federated-authenticator/pom.xml
+++ b/uae-pass-federated-authenticator/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ Copyright (c) 2015, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
+  ~ Copyright (c) 2022, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -56,11 +56,6 @@
             <artifactId>json-smart</artifactId>
             <version>${json-smart.version}</version>
         </dependency>
-        <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
-        </dependency>
     </dependencies>
     <build>
         <pluginManagement>
@@ -73,7 +68,7 @@
                 </plugin>
             </plugins>
         </pluginManagement>
-
+<!--note dependecies-->
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -105,6 +100,11 @@
                 </configuration>
             </plugin>
         </plugins>
+
+<!--        release plugin-->
+<!--        sonarcube-->
+<!--        checkstyle-->
+<!--        findbugs -->
     </build>
 
     <repositories>
@@ -127,6 +127,7 @@
         </pluginRepository>
     </pluginRepositories>
 
+<!--    confirm versions-->
     <properties>
         <carbon.identity.framework.version>5.18.21</carbon.identity.framework.version>
         <oltu.version>1.0.0.wso2v3</oltu.version>
